Bug 292709 - sound feature not available in flash card practicing mode
Summary: sound feature not available in flash card practicing mode
Status: RESOLVED FIXED
Alias: None
Product: parley
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.9.4
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: parley bug tracker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-28 17:49 UTC by M8R-u9tvdm
Modified: 2014-02-19 20:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description M8R-u9tvdm 2012-01-28 17:49:34 UTC
Version:           0.9.4 (using KDE 4.8.0) 
OS:                Linux

If a sound file is added to a vocabulary, you should be able to play it in practice mode. This does work for the practice mode Written, but does not for Flash Cards (other modes weren't tested).

Reproducible: Always
Comment 1 Inge Wallin 2014-02-17 20:41:50 UTC
This is not really a bug, but a wish.  :)   But good news: We are starting to work on sound support for all practice modes.
Comment 2 Inge Wallin 2014-02-19 20:05:25 UTC
Git commit 178eafbacb5fe6888533a1d658063b312f139bb9 by Inge Wallin.
Committed on 19/02/2014 at 20:07.
Pushed by ingwa into branch 'master'.

Add sound support to the flashcard practice mode.
REVIEW: 115892

M  +14   -4    src/practice/flashcardmodewidget.cpp
M  +94   -30   src/practice/practice_widget_flashcard.ui

http://commits.kde.org/parley/178eafbacb5fe6888533a1d658063b312f139bb9
Comment 3 Inge Wallin 2014-02-19 20:05:25 UTC
Git commit 178eafbacb5fe6888533a1d658063b312f139bb9 by Inge Wallin.
Committed on 19/02/2014 at 20:07.
Pushed by ingwa into branch 'master'.

Add sound support to the flashcard practice mode.
REVIEW: 115892

M  +14   -4    src/practice/flashcardmodewidget.cpp
M  +94   -30   src/practice/practice_widget_flashcard.ui

http://commits.kde.org/parley/178eafbacb5fe6888533a1d658063b312f139bb9