Add sound support to the flashcard practice mode.

BUG: 292709
FEATURE: 292709
REVIEW: 115892